service/ingress/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdeploy
  labels:
    name:  webdeploy
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      server: web       
  template:
    metadata:
      labels:
        server: web
    spec:
      containers:
      - name: webserver
        image: httpd:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
            name: "httpd-port"
