service/ingress/ingress.yaml
NOT USED! 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  #annotations: 
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    kubernetes.io/ingress.class: "nginxx"
  labels:
    name: web-ingress
spec:
  rules:
  - host: mysite.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: websrvc
            port: 
              number: 8080
